Add collections to IndexDocuments metric